WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50975
WebKit2: Leaks a WebView when opening/closing Web Inspector on Windows
https://bugs.webkit.org/show_bug.cgi?id=50975
Summary
WebKit2: Leaks a WebView when opening/closing Web Inspector on Windows
Brian Weinstein
Reported
2010-12-13 14:21:19 PST
We leak a WebView when opening/closing the Web Inspector on Windows. The fix to this is to use RefPtr<WebView> instead of WebView* for our m_inspectorView member variable.
Attachments
[PATCH] Fix
(2.87 KB, patch)
2010-12-13 14:27 PST
,
Brian Weinstein
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2010-12-13 14:21:35 PST
<
rdar://problem/8763501
>
Brian Weinstein
Comment 2
2010-12-13 14:27:28 PST
Created
attachment 76442
[details]
[PATCH] Fix I will wait for
https://bugs.webkit.org/show_bug.cgi?id=50898
to be reviewed and landed, then will land this to prevent more conflicts.
Brian Weinstein
Comment 3
2010-12-13 15:03:27 PST
Landed in
r73970
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug