WebKit2: Leaks a WebView when opening/closing Web Inspector on Windows https://bugs.webkit.org/show_bug.cgi?id=50975 <rdar://problem/8763501>

Reviewed by Adam Roben.

Make m_inspectorView be a RefPtr<WebView>, instead of a WebView*.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::WebInspectorProxy): If we are on Windows, include WebView.h.
* UIProcess/WebInspectorProxy.h: Change the type of m_inspectorView to a RefPtr<WebView>.
* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::platformCreateInspectorPage): Remove the call to leakRef when creating the WebView.



Canonical link: https://commits.webkit.org/64321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73970 268f45cc-cd09-0410-ab3c-d52691b4dbfc